tests/cases/attributes/ok/attribute-macro-function-decl.ari
meta fn add_generated(input: ast) -> ast {
  return decl!(
    input

    fn generated() -> i64 {
      return original() + 1;
    }
  );
}

@add_generated
fn original() -> i64 {
  return 41;
}

fn main() -> i64 {
  return generated();
}
