tests/cases/attributes/errors/attribute-unknown.ari
@unknown
fn value() -> i64 {
  return 1;
}

fn main() -> i64 {
  return value();
}
